--- a/package.json
+++ b/package.json
@@ -11,8 +11,7 @@
   }, 
   "dependencies": { 
     "winston": "*", 
-    "node-statsd": "*",
-    "dgram": "*"
+    "node-statsd": "*"
   }, 
   "engines": {"node":">=0.4.0 < 0.7.0"}, 
   "main": "./lib/monitor"
