--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 { 
   "name": "monitor", 
-  "version": "0.1.1",
+  "version": "0.1.2",
   "description": "Hashgo's central logging utility", 
   "keywords": ["logging"], 
   "homepage": "https://github.com/HashGo/monitor", 
@@ -11,6 +11,7 @@
   }, 
   "dependencies": { 
     "winston": "*", 
+    "winston-graylog2": "*",
     "node-statsd": "*"
   }, 
   "engines": {"node":">=0.4.0 < 0.7.0"}, 
